--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
     }
 
     const dateInput = document.getElementById('workDate');
+
+    // แก้ตรงนี้เพื่อใช้เวลาท้องถิ่นจริง ๆ
+    const today = new Date();
+    const year = today.getFullYear();
+    const month = String(today.getMonth() + 1).padStart(2, '0');
+    const day = String(today.getDate()).padStart(2, '0');
+    dateInput.value = `${year}-${month}-${day}`;
+
     const employeeSelect = document.getElementById('employeeSelect');
     const checkboxes = document.querySelectorAll('#taskList input[type="checkbox"]');
     const saveBtn = document.getElementById('saveBtn');
@@ -185,8 +193,6 @@
     const individualContainer = document.getElementById('individualContainer');
     const summaryContainer = document.getElementById('summaryContainer');
     const yesterdaySummaryContainer = document.getElementById('yesterdaySummaryContainer');
-
-    dateInput.value = new Date().toISOString().slice(0,10);
 
     async function deleteEmployeeData(emp) {
       const day = dateInput.value;
