--- a/summary.html
+++ b/summary.html
@@ -53,7 +53,11 @@
     const dateInput = document.getElementById("summaryDate");
     const summaryBox = document.getElementById("summaryContainer");
 
-    dateInput.value = new Date().toISOString().slice(0, 10);
+    const today = new Date();
+    const year = today.getFullYear();
+    const month = String(today.getMonth() + 1).padStart(2, '0');
+    const day = String(today.getDate()).padStart(2, '0');
+    dateInput.value = `${year}-${month}-${day}`;
 
     async function loadData() {
       const snapshot = await db.collection('workData').get();
