--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       background-color: #198754;
       color: white;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
       font-weight: 600;
       font-size: 16px;
       opacity: 0;
@@ -172,7 +172,15 @@
     const summaryContainer = document.getElementById('summaryContainer');
     const yesterdaySummaryContainer = document.getElementById('yesterdaySummaryContainer');
 
-    dateInput.value = new Date().toISOString().slice(0, 10);
+    function getLocalDateISO() {
+      const now = new Date();
+      const year = now.getFullYear();
+      const month = String(now.getMonth() + 1).padStart(2, '0'); // เดือน 0-11 ต้อง +1
+      const day = String(now.getDate()).padStart(2, '0');
+      return `${year}-${month}-${day}`;
+    }
+
+    dateInput.value = getLocalDateISO();
 
     function deleteEmployeeData(emp) {
       const data = loadData();
